--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -37,7 +37,8 @@
     /* ========== VISUAL ELEMENTS ========== */
     .logo-area{display:flex;justify-content:center;align-items:center;gap:1rem;margin-bottom:1rem}
     .logo-area img{max-width:100%;height:auto}
-    .hero img{max-width:240px;height:auto}
+    .hero{ text-align:center; }
+    .hero img{max-width:240px;height:auto;display:block;margin:0 auto}
     .image-section img,.feature-box img,.testemunho img{max-width:100%;display:block;margin:.5rem auto;border-radius:10px}
     .cta-btn{display:inline-block;background:var(--brand);color:#fff;padding:.8rem 1.2rem;border-radius:8px;text-decoration:none;margin-top:1rem}
 
@@ -98,17 +99,21 @@
       </header>
 
       <!-- HERO -->
-      <section class="hero prose">
+      <section class="hero">
         <img src="https://hannahenglishcourse.netlify.app/landpage/gif-hannah.gif" alt="Hannah GIF">
-        <h2>A Church-Run English Ministry for Community Outreach</h2>
-        <p>Use English education as an evangelistic bridge to families — while raising support for cross‑cultural missions.</p>
+        <div class="prose">
+          <h2>A Church-Run English Ministry for Community Outreach</h2>
+          <p>Use English education as an evangelistic bridge to families — while raising support for cross‑cultural missions.</p>
+        </div>
         <a class="cta-btn" href="https://hannahenglishcourse.netlify.app/" target="_blank">Explore the Course</a>
       </section>
 
       <!-- INTRO (restructured) -->
-      <section class="prose">
-        <span class="overline">Introduction</span>
-        <p><strong>Hannah English Course</strong> helps churches reach children with the Gospel while providing quality English learning and raising resources for missions. With a <em>gamified app</em>, Bible stories, videos, and <strong>Robot Samuel (AI)</strong>, kids learn English in a joyful, Bible‑centered way — and every class becomes a missions mobilization hub.</p>
+      <section>
+        <div class="prose">
+          <span class="overline">Introduction</span>
+          <p><strong>Hannah English Course</strong> helps churches reach children with the Gospel while providing quality English learning and raising resources for missions. With a <em>gamified app</em>, Bible stories, videos, and <strong>Robot Samuel (AI)</strong>, kids learn English in a joyful, Bible‑centered way — and every class becomes a missions mobilization hub.</p>
+        </div>
       </section>
 
       <!-- ILLUSTRATION -->
@@ -119,45 +124,51 @@
       </section>
 
       <!-- WHY CHOOSE (KEPT ORIGINAL TEXT) -->
-      <section class="prose">
-        <h3>Why Choose the Hannah English Course?</h3>
-        <ul>
-          <li><strong>Dynamic & Fun Learning:</strong> Cutting-edge methods blend technology and pedagogy for discovery-driven lessons.</li>
-          <li><strong>Gospel-Centered:</strong> Carefully chosen Bible stories reinforce Christian principles, making learning transformative.</li>
-          <li><strong>Meaningful Gamification:</strong> Points, challenges, certificates, and interactive activities drive engagement and progress.</li>
-          <li><strong>Broad Reach:</strong> Suitable for children, teens, and adults seeking a solid English foundation.</li>
-          <li><strong>Easy Deployment:</strong> Perfect for classroom use, extracurricular clubs, or self-study.</li>
-        </ul>
+      <section>
+        <div class="prose">
+          <h3>Why Choose the Hannah English Course?</h3>
+          <ul>
+            <li><strong>Dynamic & Fun Learning:</strong> Cutting-edge methods blend technology and pedagogy for discovery-driven lessons.</li>
+            <li><strong>Gospel-Centered:</strong> Carefully chosen Bible stories reinforce Christian principles, making learning transformative.</li>
+            <li><strong>Meaningful Gamification:</strong> Points, challenges, certificates, and interactive activities drive engagement and progress.</li>
+            <li><strong>Broad Reach:</strong> Suitable for children, teens, and adults seeking a solid English foundation.</li>
+            <li><strong>Easy Deployment:</strong> Perfect for classroom use, extracurricular clubs, or self-study.</li>
+          </ul>
+        </div>
       </section>
 
       <!-- HOW TO IMPLEMENT IN CHURCH (new structure) -->
-      <section class="prose">
-        <span class="overline">Implementation</span>
-        <h3>How to Implement in Your Church</h3>
-        <ul>
-          <li><strong>Target group:</strong> literate children up to <strong>10 years old</strong> (Starter level).</li>
-          <li><strong>System cost:</strong> <strong>R$ 30.00 per child/month</strong> (directed to missions).</li>
-          <li><strong>Class format:</strong> <em>twice a week (1h each)</em> or <em>once a week (2h)</em>.</li>
-          <li><strong>Church provides:</strong> room/space, <em>volunteer or paid</em> instructor, large TV or projector, internet, and basic supplies (paper/printing, coloring, poster board).</li>
-          <li><strong>Student device:</strong> each child brings a tablet or phone (any brand).</li>
-        </ul>
+      <section>
+        <div class="prose">
+          <span class="overline">Implementation</span>
+          <h3>How to Implement in Your Church</h3>
+          <ul>
+            <li><strong>Target group:</strong> literate children up to <strong>10 years old</strong> (Starter level).</li>
+            <li><strong>System cost:</strong> <strong>R$ 30.00 per child/month</strong> (directed to missions).</li>
+            <li><strong>Class format:</strong> <em>twice a week (1h each)</em> or <em>once a week (2h)</em>.</li>
+            <li><strong>Church provides:</strong> room/space, <em>volunteer or paid</em> instructor, large TV or projector, internet, and basic supplies (paper/printing, coloring, poster board).</li>
+            <li><strong>Student device:</strong> each child brings a tablet or phone (any brand).</li>
+          </ul>
+        </div>
       </section>
 
       <!-- MISSION & COMMUNITY (reworked) -->
-      <section class="prose">
-        <span class="overline">Mission & Community</span>
-        <h3>Mission & Community Engagement</h3>
-        <ul>
-          <li><strong>100% of the monthly fee</strong> supports <strong>cross‑cultural missions</strong>.</li>
-          <li><strong>Quarterly showcases</strong>: kids present songs, stories, vocabulary and phrases to families and neighbors inside the church.</li>
-          <li><strong>Care/visitation team</strong>: builds relationships and walks with families, especially the vulnerable.</li>
-          <li><strong>Sponsorship (scholarship):</strong> members can sponsor a child for <strong>R$ 30.00/month</strong> so no one is left out.</li>
-          <li><strong>Impact goal:</strong> every <strong>200 active students</strong> enable a <strong>new mission center</strong> on the field.</li>
-        </ul>
+      <section>
+        <div class="prose">
+          <span class="overline">Mission & Community</span>
+          <h3>Mission & Community Engagement</h3>
+          <ul>
+            <li><strong>100% of the monthly fee</strong> supports <strong>cross‑cultural missions</strong>.</li>
+            <li><strong>Quarterly showcases</strong>: kids present songs, stories, vocabulary and phrases to families and neighbors inside the church.</li>
+            <li><strong>Care/visitation team</strong>: builds relationships and walks with families, especially the vulnerable.</li>
+            <li><strong>Sponsorship (scholarship):</strong> members can sponsor a child for <strong>R$ 30.00/month</strong> so no one is left out.</li>
+            <li><strong>Impact goal:</strong> every <strong>200 active students</strong> enable a <strong>new mission center</strong> on the field.</li>
+          </ul>
+        </div>
       </section>
 
-      <!-- IMPACT BANNER EN -->
-      <section class="impact-banner prose" aria-label="Impact Goal">
+      <!-- IMPACT BANNER EN (full width) -->
+      <section class="impact-banner" aria-label="Impact Goal">
         <span class="overline">Impact Goal</span>
         <div class="impact-inner">
           <div class="impact-kpi">
@@ -167,7 +178,6 @@
           <div class="impact-text">
             <h2>= 1 new mission center</h2>
             <p class="muted">Every group of 200 students sustains the opening of a new mission center on the field. Your church can be part of this breakthrough.</p>
-            <!-- Optional progress (static example) -->
             <div class="progress" data-current="0" data-target="200">
               <div class="bar"></div>
               <div class="progress-info"><strong>0 / 200</strong> students</div>
@@ -303,9 +313,11 @@
       </section>
 
       <!-- CTA EN -->
-      <section class="prose">
-        <h3>Bring Hannah English Course to Your Church</h3>
-        <p>Evangelize families, serve children with excellent education, and fund missions — all in one ministry.</p>
+      <section>
+        <div class="prose">
+          <h3>Bring Hannah English Course to Your Church</h3>
+          <p>Evangelize families, serve children with excellent education, and fund missions — all in one ministry.</p>
+        </div>
         <div style="text-align:center">
           <a class="cta-btn" href="https://hannahenglishcourse.netlify.app/" target="_blank">Discover the Course Now</a>
         </div>
@@ -336,17 +348,21 @@
       </header>
 
       <!-- HERO -->
-      <section class="hero prose">
+      <section class="hero">
         <img src="https://hannahenglishcourse.netlify.app/landpage/gif-hannah.gif" alt="Hannah em GIF">
-        <h2>Um ministério de inglês para alcançar a comunidade</h2>
-        <p>Use o ensino de inglês como ponte com as famílias — e como combustível para missões transculturais.</p>
+        <div class="prose">
+          <h2>Um ministério de inglês para alcançar a comunidade</h2>
+          <p>Use o ensino de inglês como ponte com as famílias — e como combustível para missões transculturais.</p>
+        </div>
         <a class="cta-btn" href="https://hannahenglishcourse.netlify.app/" target="_blank">Conheça o Curso</a>
       </section>
 
       <!-- INTRO (restructured) -->
-      <section class="prose">
-        <span class="overline">Introdução</span>
-        <p>O <strong>Hannah English Course</strong> é um projeto para igrejas que une <strong>evangelização</strong>, <strong>formação em inglês</strong> e <strong>sustento de missões transculturais</strong>. Com <em>aplicativo gamificado</em>, histórias bíblicas, vídeos e o <strong>Robô Samuel (IA)</strong>, as crianças aprendem inglês de forma alegre e <strong>centrada na Palavra</strong> — e cada turma torna-se uma base de mobilização missionária.</p>
+      <section>
+        <div class="prose">
+          <span class="overline">Introdução</span>
+          <p>O <strong>Hannah English Course</strong> é um projeto para igrejas que une <strong>evangelização</strong>, <strong>formação em inglês</strong> e <strong>sustento de missões transculturais</strong>. Com <em>aplicativo gamificado</em>, histórias bíblicas, vídeos e o <strong>Robô Samuel (IA)</strong>, as crianças aprendem inglês de forma alegre e <strong>centrada na Palavra</strong> — e cada turma torna-se uma base de mobilização missionária.</p>
+        </div>
       </section>
 
       <!-- ILLUSTRATION -->
@@ -357,45 +373,51 @@
       </section>
 
       <!-- WHY CHOOSE PT (KEPT ORIGINAL TEXT) -->
-      <section class="prose">
-        <h3>Por que Escolher o Hannah English Course?</h3>
-        <ul>
-          <li><strong>Aprendizado Dinâmico:</strong> Metodologias atuais unem tecnologia e pedagogia cristã.</li>
-          <li><strong>Centrado no Evangelho:</strong> Histórias bíblicas reforçam princípios cristãos, tornando o aprendizado transformador.</li>
-          <li><strong>Gamificação Significativa:</strong> Pontos, desafios e certificados impulsionam o engajamento.</li>
-          <li><strong>Alcance Amplo:</strong> Para crianças, adolescentes e adultos que buscam base sólida em inglês.</li>
-          <li><strong>Implantação Fácil:</strong> Ideal para sala de aula, clubes extracurriculares ou autoestudo.</li>
-        </ul>
+      <section>
+        <div class="prose">
+          <h3>Por que Escolher o Hannah English Course?</h3>
+          <ul>
+            <li><strong>Aprendizado Dinâmico:</strong> Metodologias atuais unem tecnologia e pedagogia cristã.</li>
+            <li><strong>Centrado no Evangelho:</strong> Histórias bíblicas reforçam princípios cristãos, tornando o aprendizado transformador.</li>
+            <li><strong>Gamificação Significativa:</strong> Pontos, desafios e certificados impulsionam o engajamento.</li>
+            <li><strong>Alcance Amplo:</strong> Para crianças, adolescentes e adultos que buscam base sólida em inglês.</li>
+            <li><strong>Implantação Fácil:</strong> Ideal para sala de aula, clubes extracurriculares ou autoestudo.</li>
+          </ul>
+        </div>
       </section>
 
       <!-- HOW TO IMPLEMENT PT (new structure) -->
-      <section class="prose">
-        <span class="overline">Implantação</span>
-        <h3>Formas de Implantação nas Igrejas Cristãs</h3>
-        <ul>
-          <li><strong>Público-alvo:</strong> crianças alfabetizadas até <strong>10 anos</strong> (nível Starter).</li>
-          <li><strong>Custo do sistema:</strong> <strong>R$ 30,00 por criança/mês</strong> (direcionado a missões).</li>
-          <li><strong>Formato das aulas:</strong> <em>2× por semana (1h cada)</em> ou <em>1× por semana (2h)</em>.</li>
-          <li><strong>O que a igreja oferece:</strong> espaço/sala, <em>instrutor voluntário ou professor remunerado</em>, TV grande ou projetor, internet e materiais (papel/impresso, colorir, cartolina).</li>
-          <li><strong>Dispositivo do aluno:</strong> cada criança traz tablet ou celular (qualquer marca).</li>
-        </ul>
+      <section>
+        <div class="prose">
+          <span class="overline">Implantação</span>
+          <h3>Formas de Implantação nas Igrejas Cristãs</h3>
+          <ul>
+            <li><strong>Público-alvo:</strong> crianças alfabetizadas até <strong>10 anos</strong> (nível Starter).</li>
+            <li><strong>Custo do sistema:</strong> <strong>R$ 30,00 por criança/mês</strong> (direcionado a missões).</li>
+            <li><strong>Formato das aulas:</strong> <em>2× por semana (1h cada)</em> ou <em>1× por semana (2h)</em>.</li>
+            <li><strong>O que a igreja oferece:</strong> espaço/sala, <em>instrutor voluntário ou professor remunerado</em>, TV grande ou projetor, internet e materiais (papel/impresso, colorir, cartolina).</li>
+            <li><strong>Dispositivo do aluno:</strong> cada criança traz tablet ou celular (qualquer marca).</li>
+          </ul>
+        </div>
       </section>
 
       <!-- MISSION & COMMUNITY PT (reworked) -->
-      <section class="prose">
-        <span class="overline">Missão & Comunidade</span>
-        <h3>Missão & Envolvimento com a Comunidade</h3>
-        <ul>
-          <li><strong>100% da mensalidade</strong> é destinada a <strong>missões transculturais</strong>.</li>
-          <li><strong>Apresentações trimestrais</strong>: crianças mostram músicas, histórias, vocabulário e frases para famílias e vizinhos na igreja.</li>
-          <li><strong>Equipe de acolhimento/visitação</strong>: aproxima e acompanha as famílias, com atenção especial às mais vulneráveis.</li>
-          <li><strong>Apadrinhamento (bolsa):</strong> membros podem apadrinhar uma criança por <strong>R$ 30,00/mês</strong> para que ninguém fique de fora.</li>
-          <li><strong>Meta de impacto:</strong> a cada <strong>200 alunos ativos</strong>, abrimos um <strong>novo centro missionário</strong> no campo.</li>
-        </ul>
+      <section>
+        <div class="prose">
+          <span class="overline">Missão & Comunidade</span>
+          <h3>Missão & Envolvimento com a Comunidade</h3>
+          <ul>
+            <li><strong>100% da mensalidade</strong> é destinada a <strong>missões transculturais</strong>.</li>
+            <li><strong>Apresentações trimestrais</strong>: crianças mostram músicas, histórias, vocabulário e frases para famílias e vizinhos na igreja.</li>
+            <li><strong>Equipe de acolhimento/visitação</strong>: aproxima e acompanha as famílias, com atenção especial às mais vulneráveis.</li>
+            <li><strong>Apadrinhamento (bolsa):</strong> membros podem apadrinhar uma criança por <strong>R$ 30,00/mês</strong> para que ninguém fique de fora.</li>
+            <li><strong>Meta de impacto:</strong> a cada <strong>200 alunos ativos</strong>, abrimos um <strong>novo centro missionário</strong> no campo.</li>
+          </ul>
+        </div>
       </section>
 
-      <!-- IMPACT BANNER PT -->
-      <section class="impact-banner prose" aria-label="Meta de Impacto">
+      <!-- IMPACT BANNER PT (full width) -->
+      <section class="impact-banner" aria-label="Meta de Impacto">
         <span class="overline">Meta de Impacto</span>
         <div class="impact-inner">
           <div class="impact-kpi">
@@ -405,7 +427,6 @@
           <div class="impact-text">
             <h2>= 1 novo centro missionário</h2>
             <p class="muted">Cada grupo de 200 alunos sustenta a abertura de um novo centro no campo. Sua igreja pode fazer parte desta virada.</p>
-            <!-- Barra de progresso opcional (exemplo estático) -->
             <div class="progress" data-current="0" data-target="200">
               <div class="bar"></div>
               <div class="progress-info"><strong>0 / 200</strong> alunos</div>
@@ -541,9 +562,11 @@
       </section>
 
       <!-- CTA PT -->
-      <section class="prose">
-        <h3>Traga o Hannah English Course para Sua Igreja</h3>
-        <p>Evangelize famílias, sirva crianças com educação de qualidade e invista em missões — tudo na mesma obra.</p>
+      <section>
+        <div class="prose">
+          <h3>Traga o Hannah English Course para Sua Igreja</h3>
+          <p>Evangelize famílias, sirva crianças com educação de qualidade e invista em missões — tudo na mesma obra.</p>
+        </div>
         <div style="text-align:center">
           <a class="cta-btn" href="https://hannahenglishcourse.netlify.app/" target="_blank">Conheça o Curso Agora</a>
         </div>
