--- a/Atividades/MemoryGame2/index.html
+++ b/Atividades/MemoryGame2/index.html
@@ -111,7 +111,7 @@
         }
 
         .card-back {
-            background-color: #c4ff00;       
+            background-color: #c4ff00;
             transform: rotateY(180deg);
         }
 
@@ -207,7 +207,7 @@
     </div>
     <button id="restart-button" onclick="restartGame()">Restart Game</button>
 
-    <!-- Modal de conclusão --> 
+    <!-- Modal de conclusão -->
     <div id="overlay"></div>
     <div id="completion-modal">
         <h2>Phase Completed!</h2>
@@ -226,7 +226,7 @@
             authDomain: "hannahenglishcourse.firebaseapp.com",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com", // Mantenha o valor original aqui
+            storageBucket: "hannahenglishcourse.appspot.com",
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
         };
@@ -242,61 +242,69 @@
         let lockBoard = false;
         let matchedPairs = 0;
         let totalPairs = 0;
-        let alertDisplayed = false; // Variável global para rastrear se a mensagem já foi exibida
+        let alertDisplayed = false;
 
-function getParamsFromURL() {
-    const params = new URLSearchParams(window.location.search);
-    return {
-        level: params.get('level'),
-        unit: params.get('unit'),
-        fase: params.get('fase'),
-    };
-}
+        function getParamsFromURL() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                level: params.get('level'),
+                unit: params.get('unit'),
+                fase: params.get('fase'),
+            };
+        }
 
         function loadCardsData(callback) {
-    const { level, unit } = getParamsFromURL();
-    if (!level || !unit) {
-        console.error("Parâmetros 'level' e 'unit' são obrigatórios na URL.");
-        return;
-    }
-
-    const wordsPath = `../../${level}/${unit}/data2/words.txt`;
-    const imagePathTemplate = `../../${level}/${unit}/data2/imagens/imagem`;
-
-    fetch(wordsPath)
-        .then(response => {
-            if (!response.ok) {
-                throw new Error(`Erro ao carregar palavras de ${wordsPath}`);
+            const { level, unit } = getParamsFromURL();
+            if (!level || !unit) {
+                console.error("Parâmetros 'level' e 'unit' são obrigatórios na URL.");
+                return;
             }
-            return response.text();
-        })
-        .then(text => {
-            const words = text.trim().split('\n');
-            const cardsArray = [];
 
-            words.forEach((word, index) => {
-                const imagePath = `${imagePathTemplate}${index + 1}.png`;
+            const wordsPath = `../../${level}/${unit}/data2/words.txt`;
+            const imagePathTemplate = `../../${level}/${unit}/data2/imagens/imagem`;
 
-                cardsArray.push({
-                    type: 'image',
-                    src: imagePath,
-                    pair: `pair${index + 1}`,
+            fetch(wordsPath)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`Erro ao carregar palavras de ${wordsPath}`);
+                    }
+                    return response.text();
+                })
+                .then(text => {
+                    // mantém a ordem e remove linhas vazias/ espaços
+                    const words = text
+                        .split('\n')
+                        .map(w => w.trim())
+                        .filter(Boolean);
+
+                    const cardsArray = [];
+
+                    words.forEach((word, index) => {
+                        const imagePath = `${imagePathTemplate}${index + 1}.png`;
+
+                        // card de imagem
+                        cardsArray.push({
+                            type: 'image',
+                            src: imagePath,
+                            pair: `pair${index + 1}`,
+                        });
+
+                        // card de palavra (amarra índice para somN.mp3)
+                        cardsArray.push({
+                            type: 'word',
+                            text: word,
+                            pair: `pair${index + 1}`,
+                            wordIndex: index, // <- importante para som{index+1}.mp3
+                        });
+                    });
+
+                    totalPairs = words.length;
+                    callback(cardsArray);
+                })
+                .catch(error => {
+                    console.error("Erro ao carregar dados:", error);
                 });
-
-                cardsArray.push({
-                    type: 'word',
-                    text: word.trim(),
-                    pair: `pair${index + 1}`,
-                });
-            });
-
-            totalPairs = words.length;
-            callback(cardsArray);
-        })
-        .catch(error => {
-            console.error("Erro ao carregar dados:", error);
-        });
-}
+        }
 
         function initGame(cardsArray) {
             gameContainer.innerHTML = '';
@@ -344,6 +352,10 @@ function getParamsFromURL() {
                 word.classList.add('word');
                 word.textContent = cardData.text;
                 cardBack.appendChild(word);
+                // armazena o índice da palavra (0-based)
+                if (typeof cardData.wordIndex === 'number') {
+                    card.dataset.wordIndex = String(cardData.wordIndex);
+                }
             }
 
             cardInner.appendChild(cardFront);
@@ -355,26 +367,28 @@ function getParamsFromURL() {
         }
 
         function flipCard() {
-    if (lockBoard) return;
-    if (this.classList.contains('flipped')) return;
+            if (lockBoard) return;
+            if (this.classList.contains('flipped')) return;
 
-    this.classList.add('flipped');
+            this.classList.add('flipped');
 
-    // Se a carta tiver uma palavra, use o sintetizador de voz para lê-la
-    if (this.querySelector('.word')) {
-        const word = this.querySelector('.word').textContent;
-        speakText(word);
-    }
+            // Se for a carta de PALAVRA, toca somN.mp3 com fallback para TTS
+            const wordEl = this.querySelector('.word');
+            if (wordEl) {
+                const word = wordEl.textContent;
+                const idx = parseInt(this.dataset.wordIndex || '-1', 10);
+                playMp3OrSpeak(idx, word);
+            }
 
-    if (!firstCard) {
-        firstCard = this;
-        return;
-    }
+            if (!firstCard) {
+                firstCard = this;
+                return;
+            }
 
-    secondCard = this;
-    updateMoveCounter();
-    checkForMatch();
-}
+            secondCard = this;
+            updateMoveCounter();
+            checkForMatch();
+        }
 
         function checkForMatch() {
             const isMatch = firstCard.dataset.pair === secondCard.dataset.pair;
@@ -442,31 +456,31 @@ function getParamsFromURL() {
             });
         }
 
-       async function updateNextPhase(userId) {
-    console.log("Updating next phase...");
-    const currentPhase = getPhaseFromURL();
-    const { level, unit } = getParamsFromURL();
-    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+        async function updateNextPhase(userId) {
+            console.log("Updating next phase...");
+            const currentPhase = getPhaseFromURL();
+            const { level, unit } = getParamsFromURL();
+            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-    try {
-        if (currentPhase === "last") {
-            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-            console.log(`Unlocking next unit: ${nextUnit}`);
-            await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
-        } else if (currentPhase === "end") {
-            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-            console.log(`Unlocking next level: ${nextLevel}`);
-            await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
-        } else {
-            const nextPhase = parseInt(currentPhase) + 1;
-            console.log(`Unlocking next phase: fase${nextPhase}`);
-            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+            try {
+                if (currentPhase === "last") {
+                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    console.log(`Unlocking next unit: ${nextUnit}`);
+                    await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+                } else if (currentPhase === "end") {
+                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    console.log(`Unlocking next level: ${nextLevel}`);
+                    await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+                } else {
+                    const nextPhase = parseInt(currentPhase) + 1;
+                    console.log(`Unlocking next phase: fase${nextPhase}`);
+                    await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                }
+                console.log("Update successful.");
+            } catch (error) {
+                console.error("Error updating next phase:", error);
+            }
         }
-        console.log("Update successful.");
-    } catch (error) {
-        console.error("Error updating next phase:", error);
-    }
-}
 
         function getPhaseFromURL() {
             const params = new URLSearchParams(window.location.search);
@@ -479,7 +493,7 @@ function getParamsFromURL() {
             return { level: parts[1], unit: parts[2] };
         }
 
-       async function goBack() {
+        async function goBack() {
             console.log("[DEBUG] Back button clicked");
             const { level, unit, fase } = getParamsFromURL();
             console.log("[DEBUG] URL Params:", { level, unit, fase });
@@ -547,49 +561,74 @@ function getParamsFromURL() {
             loadCardsData(initGame);
         }
 
-function speakText(text) {
-    const synth = window.speechSynthesis;
-
-    // Cancela qualquer síntese anterior
-    synth.cancel();
-
-    // Função para verificar vozes e realizar a leitura
-    const readText = () => {
-        const voices = synth.getVoices();
-        let voice = voices.find(v => v.lang === 'en-US');
-
-        // Caso não encontre a voz "en-US"
-        if (!voice && !alertDisplayed) {
-            if (voices.length === 0) {
-                alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
-            } else {
-                alert("No 'en-US' voice found. Using default voice instead.");
+        /** PRIORIDADE MP3 → fallback TTS (mantém speakText original) */
+        function playMp3OrSpeak(wordIndex, text, onEnded) {
+            // índice inválido? cai direto no TTS
+            if (typeof wordIndex !== 'number' || wordIndex < 0) {
+                speakText(text);
+                if (typeof onEnded === 'function') onEnded();
+                return;
             }
-            alertDisplayed = true; // Marca a mensagem como exibida
+
+            const { level, unit } = getParamsFromURL();
+            const src = `../../${level}/${unit}/data2/sounds/som${wordIndex + 1}.mp3`;
+
+            const audio = new Audio();
+            audio.src = src;
+            audio.preload = 'auto';
+
+            let fellBack = false;
+            const useTTS = () => {
+                if (fellBack) return;
+                fellBack = true;
+                speakText(text);
+                if (typeof onEnded === 'function') {
+                    // SpeechSynthesis não dispara um onended global aqui; deixamos simples
+                    setTimeout(onEnded, 0);
+                }
+            };
+
+            audio.oncanplaythrough = () => {
+                audio.play().catch(() => useTTS());
+            };
+            audio.onerror = () => useTTS();
+            audio.onended = () => { if (typeof onEnded === 'function') onEnded(); };
         }
 
-        // Configura o texto para leitura
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = 'en-US'; // Força o idioma inglês americano
-        if (voice) {
-            utterance.voice = voice;
+        function speakText(text) {
+            const synth = window.speechSynthesis;
+            synth.cancel();
+
+            const readText = () => {
+                const voices = synth.getVoices();
+                let voice = voices.find(v => v.lang === 'en-US');
+
+                if (!voice && !alertDisplayed) {
+                    if (voices.length === 0) {
+                        alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
+                    } else {
+                        alert("No 'en-US' voice found. Using default voice instead.");
+                    }
+                    alertDisplayed = true;
+                }
+
+                const utterance = new SpeechSynthesisUtterance(text);
+                utterance.lang = 'en-US';
+                if (voice) {
+                    utterance.voice = voice;
+                }
+
+                synth.speak(utterance);
+            };
+
+            if (synth.getVoices().length === 0) {
+                synth.onvoiceschanged = () => {
+                    readText();
+                };
+            } else {
+                readText();
+            }
         }
-
-        // Realiza a leitura
-        synth.speak(utterance);
-    };
-
-    // Verifica se as vozes já estão carregadas
-    if (synth.getVoices().length === 0) {
-        // Adiciona evento para aguardar o carregamento das vozes
-        synth.onvoiceschanged = () => {
-            readText();
-        };
-    } else {
-        // Caso as vozes já estejam disponíveis
-        readText();
-    }
-}
 
         loadCardsData(initGame);
         window.addEventListener('resize', adjustFontSize);
