--- a/Atividades/Mixed Letters starter/index.html
+++ b/Atividades/Mixed Letters starter/index.html
@@ -274,7 +274,8 @@
         const synth = window.speechSynthesis;
         const voices = synth.getVoices();
         selectedVoice = voices.find(v => v.lang.startsWith("en-")) || voices[0];
-        if (!selectedVoice && !alertDisplayed) { alertDisplayed = true; alert("No English voice found. Using default voice."); }
+        if (!selectedVoice && !alertDisplayed) { alertDisplayed = true; 
+      }
     }
     window.speechSynthesis.onvoiceschanged = initializeVoices;
 
